[package]
name = "server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
protocol = { path = "../../crates/protocol" }
